--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -36,8 +36,9 @@
             android:layout_marginTop="13dp"
             android:layout_marginBottom="11dp"
             android:text="Bids And Acution"
-            android:textSize="22dp"
-            android:textStyle="bold" />
+            android:textSize="22sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TextSizeCheck" />
 
         <ImageView
             android:id="@+id/toolcart"
@@ -48,10 +49,7 @@
             android:layout_marginEnd="34dp"
             android:layout_marginBottom="14dp"
             android:src="@drawable/cart"
-            android:contentDescription="TODO" />
+            android:contentDescription="@string/back" />
 
     </RelativeLayout>
-
-
-
 </RelativeLayout>
